# attendance_app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  config.example.toml  index.html  neovim.json  server.c  server.h  types.h
